# mqtt-topic-auth

./: .gitignore  README.md  add_public_key_server.py  client.py  client_test.py  flake.nix  generate-keys.py  pyproject.toml  schema_factory.py  server.py  server_test.py  shell.nix
authentication/: challenges.py
blockchain/: AuthTickets.sol
capnp_processing/: request.py  ticket.py
capnp_schemas/: request.capnp  ticket.capnp  token.capnp
docs/: public_key_auth.plantuml
docs/code/: issuing_token.plantuml  noise_XX.plantuml  reauthentication.plantuml
keygen/: add_public_key_client.py  add_public_key_server.py  generate-keys.py  generate_keys.py
mqtt/: dynsec_mqtt.py  mqtt_pub_sub.py  mqtt_reauth.py
