[tool.poetry]
name = "mqtt-topic-auth"
version = "0.1.0"
description = ""
authors = ["Christin <caa8062@rit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio-mqtt = "^0.16.2"
paho-mqtt = "^2.0.0"
cryptography = "^42.0.2"
dissononce = "^0.34.3"
pycapnp = "^1.3.0"
python-dotenv = "^1.0.1"
transitions = "^0.9.0"

[tool.poetry.group.dev.dependencies]
asyncio-mqtt = "^0.16.2"
paho-mqtt = "^2.0.0"
cryptography = "^42.0.2"
dissononce = "^0.34.3"
python-dotenv = "^1.0.1"
pycapnp = "^1.3.0"
transitions = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
